samples/_failures_safe/1761410997_cfe9ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b70e737d.c: In function ‘handle_event’:
./samples/SAFE/__tmp_b70e737d.c:158:13: error: expected declaration or statement at end of input
  158 |             initialize_state_machine(sm);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b70e737d.c:158:13: error: expected declaration or statement at end of input
